# barCodeDetector

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ico.qrc  main.cpp  tencentsdk.py  widget.cpp  widget.h  widget.ui
.github/workflows/: cmake.yml  codeql-analysis.yml
User/: cam.cpp  cam.h  imque.cpp  imque.h  ocr.cpp  ocr.h  ocv.cpp  ocv.h  test.cpp  test.h
